--- a/Project.toml
+++ b/Project.toml
@@ -1,9 +1,54 @@
 name = "RomeoDFT"
 uuid = "87c4fabc-abb4-4467-86a6-1748b5c259fe"
-authors = ["louis ponet<louisponet@epfl.ch>","and contributors",]
+authors = ["Louis Ponet<louisponet@epfl.ch>","and contributors",]
 version = "0.1.0"
 
 [deps]
+Comonicon = "863f3e99-da2a-4334-8734-de3dacbe5542"
+DFControl = "1e31e15d-4957-550d-a244-318eced754ae"
+DFWannier = "5e267647-ebb4-5b7d-bc28-1d3eda37ab19"
+Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
+Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
+EulerAngles = "754c60e7-4104-4b2f-84f1-902fd791391f"
+JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+LoggingExtras = "e6f89c97-d47a-5376-807f-9c37f3926c36"
+Optim = "429524aa-4258-5aef-a3af-852621145aeb"
+Overseer = "1ada24be-c16d-4464-9f61-27c2e0f16645"
+Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
+PrettyTables = "08abe8d2-0d0c-5749-adfa-8a2ac140af0d"
+ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
+REPL = "3fa0cd96-eef1-5676-8a61-b3b8758bbffb"
+Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
+RemoteHPC = "c4f2a1c4-7655-40d8-82ee-c6ae0a8b7409"
+RemoteREPL = "1bd9f7bb-701c-4338-bec7-ac987af7c555"
+Requires = "ae029012-a4dd-5104-9daa-d747884805df"
+SnoopPrecompile = "66db9d55-30c0-4569-8b51-7e840670fc0c"
+Sockets = "6462fe0b-24de-5631-8697-dd941f90decc"
+ThreadPools = "b189fb0b-2eb5-4ed4-bc0c-d34c51242431"
+TOML = "fa267f1f-6049-4f14-aa54-33bafae1ed76"
 
 [compat]
-julia = "1.9"
+DFControl = "^0.5.21"
+DFWannier = "^0.2.1"
+Distances = "^0.10.7"
+EulerAngles = "^0.1.0"
+JLD2 = "^0.4.29"
+LoggingExtras = "^1.0"
+Optim = "^1.7.4"
+Overseer = "^0.2.5"
+ProgressMeter = "^1.7.2"
+Reexport = "^1.2.2"
+RemoteHPC = "^0.3.13"
+RemoteREPL = "^0.2.17"
+Requires = "^1.3.0"
+SnoopPrecompile = "^1.0.1"
+Comonicon = "^1.0.4"
+julia = "^1.6"
+
+[extras]
+LazyArtifacts = "4af54fe1-eca0-43a8-85a7-787d91b784e3"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
+[targets]
+test = ["Test", "LazyArtifacts"]
