--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,7 +1,3 @@
 [deps]
-DocThemeIndigo = "8bac0ac5-51bf-41f9-885e-2bf1ac2bec5f"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
-RomeoDFT = "87c4fabc-abb4-4467-86a6-1748b5c259fe"
-
-[compat]
-DocThemeIndigo = "0.1.1"
+Occupations = "a6a1e666-9e02-4a85-965f-8654588179a1"
