--- a/Project.toml
+++ b/Project.toml
@@ -44,6 +44,8 @@ RemoteREPL = "^0.2.17"
 Requires = "^1.3.0"
 SnoopPrecompile = "^1.0.1"
 Comonicon = "^1.0.4"
+ThreadPools = "^2"
+PrettyTables = "^2"
 julia = "^1.6"
 
 [extras]
