--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -14,18 +14,15 @@ jobs:
   test:
     name: Julia ${{ matrix.version }} - ${{ matrix.os }} - ${{ matrix.arch }} - ${{ github.event_name }}
     runs-on: ${{ matrix.os }}
+    env:
+      IN_CI: true
     strategy:
       fail-fast: false
       matrix:
         version:
-          - "1.6"
           - "1.8"
-          - "1.9"
-          - "nightly"
         os:
           - ubuntu-latest
-          - macos-latest
-          - windows-latest
         arch:
           - x86
           - x86_64
