--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,3 +1,3 @@
 [deps]
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
-Occupations = "a6a1e666-9e02-4a85-965f-8654588179a1"
+RomeoDFT = "87c4fabc-abb4-4467-86a6-1748b5c259fe"
