--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,6 @@
 name = "RomeoDFT"
 uuid = "87c4fabc-abb4-4467-86a6-1748b5c259fe"
-authors = ["Louis Ponet<louisponet@epfl.ch>","and contributors",]
+authors = ["Louis Ponet<louisponet@epfl.ch>", "and contributors"]
 version = "0.1.0"
 
 [deps]
@@ -13,6 +13,7 @@ EulerAngles = "754c60e7-4104-4b2f-84f1-902fd791391f"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 LoggingExtras = "e6f89c97-d47a-5376-807f-9c37f3926c36"
+MacroTools = "1914dd2f-81c6-5fcd-8719-6d5c9610ff09"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 Overseer = "1ada24be-c16d-4464-9f61-27c2e0f16645"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
@@ -25,10 +26,13 @@ RemoteREPL = "1bd9f7bb-701c-4338-bec7-ac987af7c555"
 Requires = "ae029012-a4dd-5104-9daa-d747884805df"
 SnoopPrecompile = "66db9d55-30c0-4569-8b51-7e840670fc0c"
 Sockets = "6462fe0b-24de-5631-8697-dd941f90decc"
-ThreadPools = "b189fb0b-2eb5-4ed4-bc0c-d34c51242431"
 TOML = "fa267f1f-6049-4f14-aa54-33bafae1ed76"
+ThreadPools = "b189fb0b-2eb5-4ed4-bc0c-d34c51242431"
+TimerOutputs = "a759f4b9-e2f1-59dc-863e-4aeb61b1ea8f"
+UUIDs = "cf7118a7-6976-5b1a-9a39-7adc72f591a4"
 
 [compat]
+Comonicon = "^1.0.4"
 DFControl = "^0.5.21"
 DFWannier = "^0.2.1"
 Distances = "^0.10.7"
@@ -37,13 +41,12 @@ JLD2 = "^0.4.29"
 LoggingExtras = "^1.0"
 Optim = "^1.7.4"
 Overseer = "^0.2.5"
+PrettyTables = "^2"
 ProgressMeter = "^1.7.2"
 Reexport = "^1.2.2"
 RemoteHPC = "^0.3.17"
 RemoteREPL = "^0.2.17"
 Requires = "^1.3.0"
 SnoopPrecompile = "^1.0.1"
-Comonicon = "^1.0.4"
 ThreadPools = "^2"
-PrettyTables = "^2"
 julia = "^1.6"
