--- a/Project.toml
+++ b/Project.toml
@@ -49,4 +49,6 @@ RemoteREPL = "^0.2.17"
 Requires = "^1.3.0"
 SnoopPrecompile = "^1.0.1"
 ThreadPools = "^2"
+MacroTools="^0.5"
+TimerOutputs="^0.5"
 julia = "^1.6"
