--- a/Project.toml
+++ b/Project.toml
@@ -39,8 +39,9 @@ Distances = "^0.10.7"
 EulerAngles = "^0.1.0"
 JLD2 = "^0.4.29"
 LoggingExtras = "^1.0"
+MacroTools = "^0.5"
 Optim = "^1.7.4"
-Overseer = "^0.2.8"
+Overseer = "^0.2.8, 0.3"
 PrettyTables = "^2"
 ProgressMeter = "^1.7.2"
 Reexport = "^1.2.2"
@@ -49,6 +50,5 @@ RemoteREPL = "^0.2.17"
 Requires = "^1.3.0"
 SnoopPrecompile = "^1.0.1"
 ThreadPools = "^2"
-MacroTools="^0.5"
-TimerOutputs="^0.5"
+TimerOutputs = "^0.5"
 julia = "^1.6"
