--- a/Project.toml
+++ b/Project.toml
@@ -17,6 +17,7 @@ MacroTools = "1914dd2f-81c6-5fcd-8719-6d5c9610ff09"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 Overseer = "1ada24be-c16d-4464-9f61-27c2e0f16645"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
+PrecompileTools = "aea7be01-6a6a-4083-8856-8a6e6704d82a"
 PrettyTables = "08abe8d2-0d0c-5749-adfa-8a2ac140af0d"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 REPL = "3fa0cd96-eef1-5676-8a61-b3b8758bbffb"
@@ -24,7 +25,6 @@ Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 RemoteHPC = "c4f2a1c4-7655-40d8-82ee-c6ae0a8b7409"
 RemoteREPL = "1bd9f7bb-701c-4338-bec7-ac987af7c555"
 Requires = "ae029012-a4dd-5104-9daa-d747884805df"
-SnoopPrecompile = "66db9d55-30c0-4569-8b51-7e840670fc0c"
 Sockets = "6462fe0b-24de-5631-8697-dd941f90decc"
 TOML = "fa267f1f-6049-4f14-aa54-33bafae1ed76"
 ThreadPools = "b189fb0b-2eb5-4ed4-bc0c-d34c51242431"
@@ -39,16 +39,15 @@ Distances = "^0.10.7"
 EulerAngles = "^0.1.0"
 JLD2 = "^0.4.29"
 LoggingExtras = "^1.0"
+MacroTools = "^0.5"
 Optim = "^1.7.4"
-Overseer = "^0.2.8"
+Overseer = "^0.3.2"
 PrettyTables = "^2"
 ProgressMeter = "^1.7.2"
 Reexport = "^1.2.2"
-RemoteHPC = "^0.3.20"
+RemoteHPC = "^0.3.27"
 RemoteREPL = "^0.2.17"
 Requires = "^1.3.0"
-SnoopPrecompile = "^1.0.1"
 ThreadPools = "^2"
-MacroTools="^0.5"
-TimerOutputs="^0.5"
+TimerOutputs = "^0.5"
 julia = "^1.6"
