--- a/Project.toml
+++ b/Project.toml
@@ -42,6 +42,7 @@ LoggingExtras = "^1.0"
 MacroTools = "^0.5"
 Optim = "^1.7.4"
 Overseer = "^0.3.2"
+PrecompileTools = "1"
 PrettyTables = "^2"
 ProgressMeter = "^1.7.2"
 Reexport = "^1.2.2"
