ml searching first commit, working maybe?

--- a/Project.toml
+++ b/Project.toml
@@ -12,10 +12,10 @@ Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 EulerAngles = "754c60e7-4104-4b2f-84f1-902fd791391f"
+Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 LoggingExtras = "e6f89c97-d47a-5376-807f-9c37f3926c36"
-MCMCChains = "c7f686f2-ff18-58e9-bc7b-31028e88f75d"
 MacroTools = "1914dd2f-81c6-5fcd-8719-6d5c9610ff09"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 Overseer = "1ada24be-c16d-4464-9f61-27c2e0f16645"
@@ -28,12 +28,11 @@ RemoteHPC = "c4f2a1c4-7655-40d8-82ee-c6ae0a8b7409"
 RemoteREPL = "1bd9f7bb-701c-4338-bec7-ac987af7c555"
 Requires = "ae029012-a4dd-5104-9daa-d747884805df"
 Sockets = "6462fe0b-24de-5631-8697-dd941f90decc"
-StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 TOML = "fa267f1f-6049-4f14-aa54-33bafae1ed76"
 ThreadPools = "b189fb0b-2eb5-4ed4-bc0c-d34c51242431"
 TimerOutputs = "a759f4b9-e2f1-59dc-863e-4aeb61b1ea8f"
-Turing = "fce5fe82-541a-59a6-adf8-730c64b5f9a0"
 UUIDs = "cf7118a7-6976-5b1a-9a39-7adc72f591a4"
+Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [compat]
 Comonicon = "^1.0.4"
@@ -44,7 +43,6 @@ EulerAngles = "^0.1.0"
 JLD2 = "^0.4.29"
 LoggingExtras = "^1.0"
 MacroTools = "^0.5"
-Optim = "^1.7.4"
 Overseer = "^0.3.2"
 PrettyTables = "^2"
 ProgressMeter = "^1.7.2"
